refactor: change for to reduce